@@ -1,79 +1,0 @@
-package xyz.zedler.patrick.grocy.fragment.bottomSheetDialog;
-
-/*
-    This file is part of Grocy Android.
-
-    Grocy Android is free software: you can redistribute it and/or modify
-    it under the terms of the GNU General Public License as published by
-    the Free Software Foundation, either version 3 of the License, or
-    (at your option) any later version.
-
-    Grocy Android is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU General Public License for more details.
-
-    You should have received a copy of the GNU General Public License
-    along with Grocy Android.  If not, see <http://www.gnu.org/licenses/>.
-
-    Copyright 2020-2021 by Patrick Zedler & Dominic Zedler
-*/
-
-import android.app.Dialog;
-import android.content.Context;
-import android.os.Bundle;
-import android.view.LayoutInflater;
-import android.view.View;
-import android.view.ViewGroup;
-import android.widget.TextView;
-
-import androidx.annotation.NonNull;
-
-import com.google.android.material.bottomsheet.BottomSheetDialog;
-
-import xyz.zedler.patrick.grocy.R;
-import xyz.zedler.patrick.grocy.util.Constants;
-
-public class MessageBottomSheet extends BaseBottomSheet {
-
-	private final static String TAG = MessageBottomSheet.class.getSimpleName();
-
-	@NonNull
-	@Override
-	public Dialog onCreateDialog(Bundle savedInstanceState) {
-		return new BottomSheetDialog(requireContext(), R.style.Theme_Grocy_BottomSheetDialog);
-	}
-
-	@Override
-	public View onCreateView(
-			LayoutInflater inflater,
-			ViewGroup container,
-			Bundle savedInstanceState
-	) {
-		View view = inflater.inflate(
-				R.layout.fragment_bottomsheet_message,
-				container,
-				false
-		);
-
-		Context context = getContext();
-		Bundle bundle = getArguments();
-		assert context != null && bundle != null;
-
-		((TextView) view.findViewById(R.id.text_message_title)).setText(
-				bundle.getString(Constants.ARGUMENT.TITLE)
-		);
-
-		((TextView) view.findViewById(R.id.text_message)).setText(
-				bundle.getString(Constants.ARGUMENT.TEXT)
-		);
-
-		return view;
-	}
-
-	@NonNull
-	@Override
-	public String toString() {
-		return TAG;
-	}
-}
