@@ -1,6 +1,7 @@
 2.0.0-alpha03
 - New: You can now use the app with the Home Assistant grocy add-on (#249)
 - Improved: Rewritten login flow
+- Improved: Update certificate compatibility information
 - Fixed: Crash when open store selection on purchase page (#347)
 - Fixed: Crash on consume page when location could not be found
 
